--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <div class="top-banner">
     <div class="w" style="position:relative;">
         <a href="#">
-            <img src="images/topimg.jpg" alt="">
+            <img src="images/topImg.jpg" alt="">
         </a>
         <a href="#" class="close-banner">
         </a>
