--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
            <div class="fr">
                <ul>
                    <li>
-                       <a href="#">你好，请登录</a>&nbsp;&nbsp;
+                       <a href="小球围绕中心运动.html">你好，请登录</a>&nbsp;&nbsp;
                        <a href="#" class="col-red">免费注册</a>
                    </li>
                    <li class="line"></li>
