--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link href="css/style.css" rel="stylesheet" type="text/css">
 <link href="css/animation.css" rel="stylesheet" media="screen" type="text/css">
 </head>
@@ -13,7 +13,7 @@
 					<span class="txt-hide front-face" style="background-color: blue">
 						<img src="images/1413775760-7544.jpg" style="opacity: 0.8" width="294" height="267">
 					</span>
-					<span class="back-face to-left"><h3>ÎÞÏß»¥Áª</h3></span>
+					<span class="back-face to-left"><h3>æ— çº¿äº’è”</h3></span>
 				</a>
 			</li>
 			<li class="major-item">
@@ -21,7 +21,7 @@
 					<span class="txt-hide front-face">
 						<img src="images/1400684346-4329.jpg" style="opacity: 0.8" width="294" height="267">
 					</span>
-					<span class="back-face to-right"><h3>¶¹°êµçÓ°</h3></span>
+					<span class="back-face to-right"><h3>è±†ç“£ç”µå½±</h3></span>
 				</a>
 			</li>
 			<li class="major-item">
@@ -29,7 +29,7 @@
 					<span class="txt-hide front-face">
 						<img src="images/1413775714-2418.jpg" style="opacity: 0.8" width="294" height="267">
 					</span>
-					<span class="back-face to-top"><h3>UÒ×¹º</h3></span>
+					<span class="back-face to-top"><h3>Uæ˜“è´­</h3></span>
 				</a>
 			</li>
 			<li class="major-item">
@@ -37,7 +37,7 @@
 					<span class="txt-hide front-face">
 						<img src="images/1411890878-8918.jpg" style="opacity: 0.8" width="294" height="267">
 					</span>
-					<span class="back-face to-top"><h3>¾©¶«ÉÌ³Ç</h3></span>
+					<span class="back-face to-top"><h3>äº¬ä¸œå•†åŸŽ</h3></span>
 				</a>
 			</li>
             <li class="major-item">
@@ -53,7 +53,7 @@
 					<span class="txt-hide front-face">
 						<img src="images/1400684434-4609.jpg" style="opacity: 0.8" width="294" height="267">
 					</span>
-					<span class="back-face to-top"><h3>¶¹°êµçÓ°</h3></span>
+					<span class="back-face to-top"><h3>è±†ç“£ç”µå½±</h3></span>
 				</a>
 			</li>
             <li class="major-item">
@@ -61,7 +61,7 @@
 					<span class="txt-hide front-face">
 						<img src="images/1428032296-8158.jpg" style="opacity: 0.8" width="294" height="267">
 					</span>
-					<span class="back-face to-top"><h3>¶¹°êµçÓ°</h3></span>
+					<span class="back-face to-top"><h3>è±†ç“£ç”µå½±</h3></span>
 				</a>
 			</li>
 			<li class="major-item">
@@ -69,7 +69,7 @@
 					<span class="txt-hide front-face">
 						<img src="images/1405250374-3685.jpg" style="opacity: 0.8" width="294" height="267">
 					</span>
-					<span class="back-face to-top"><h3>¶¹°êµçÓ°</h3></span>
+					<span class="back-face to-top"><h3>è±†ç“£ç”µå½±</h3></span>
 				</a>
 			</li>
 		</ul>
@@ -80,8 +80,8 @@
 <script type="text/javascript" src="js/main.js"></script>
 
 <div style="text-align:center;margin:50px 0; font:normal 14px/24px 'MicroSoft YaHei';">
-<p>ÊÊÓÃä¯ÀÀÆ÷£º360¡¢FireFox¡¢Chrome¡¢Safari¡¢Opera¡¢°ÁÓÎ¡¢ËÑ¹·¡¢ÊÀ½çÖ®´°. ²»Ö§³ÖIE8¼°ÒÔÏÂä¯ÀÀÆ÷¡£</p>
-<p>À´Ô´£º<a href="http://www.huiyi8.com/" target="_blank">huiyi8ËØ²ÄÍø</a></p>
+<p>é€‚ç”¨æµè§ˆå™¨ï¼š360ã€FireFoxã€Chromeã€Safariã€Operaã€å‚²æ¸¸ã€æœç‹—ã€ä¸–ç•Œä¹‹çª—. ä¸æ”¯æŒIE8åŠä»¥ä¸‹æµè§ˆå™¨ã€‚</p>
+<p>æ¥æºï¼š<a href="http://www.huiyi8.com/" target="_blank">huiyi8ç´ æç½‘</a></p>
 </div>
 </body>
 </html>
