--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				</a>
 			</li>
 			<li class="major-item">
-				<a href="http://www.huiyi8.com/">
+				<a href="demo10/index.htm">
 					<span class="txt-hide front-face">
 						<img src="images/1413775714-2418.jpg" style="opacity: 0.8" width="294" height="267">
 					</span>
