--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<div class="fr hd_r major-list-outer">
 		<ul class="major-list">
 			<li class="major-item">
-				<a href="http://www.huiyi8.com/">
+				<a href="bootstrap/indexboostrap.html">
 					<span class="txt-hide front-face" style="background-color: blue">
 						<img src="images/1413775760-7544.jpg" style="opacity: 0.8" width="294" height="267">
 					</span>
@@ -17,7 +17,7 @@
 				</a>
 			</li>
 			<li class="major-item">
-				<a href="http://www.huiyi8.com/">
+				<a href="douban/index.html">
 					<span class="txt-hide front-face">
 						<img src="images/1400684346-4329.jpg" style="opacity: 0.8" width="294" height="267">
 					</span>
