--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<ul class="major-list">
 			<li class="major-item">
 				<a href="bootstrap/indexboostrap.html">
-					<span class="txt-hide front-face" style="background-color: blue">
+					<span class="txt-hide front-face">
 						<img src="images/1413775760-7544.jpg" style="opacity: 0.8" width="294" height="267">
 					</span>
 					<span class="back-face to-left"><h3>无线互联</h3></span>
@@ -41,27 +41,27 @@
 				</a>
 			</li>
             <li class="major-item">
-				<a href="http://www.huiyi8.com/">
+				<a href="3d/moiveload.html">
 					<span class="txt-hide front-face">
 						<img src="images/1413775714-2418.jpg" style="opacity: 0.8" width="294" height="267">
 					</span>
-					<span class="back-face to-top"><h3></h3></span>
+					<span class="back-face to-top"><h3>moiveload</h3></span>
 				</a>
 			</li>
 			<li class="major-item">
-				<a href="http://www.huiyi8.com/">
+				<a href="3d/cube.html">
 					<span class="txt-hide front-face">
 						<img src="images/1400684434-4609.jpg" style="opacity: 0.8" width="294" height="267">
 					</span>
-					<span class="back-face to-top"><h3>豆瓣电影</h3></span>
+					<span class="back-face to-top"><h3>立方体扩展</h3></span>
 				</a>
 			</li>
             <li class="major-item">
-				<a href="http://www.huiyi8.com/">
+				<a href="3d/eyes.html">
 					<span class="txt-hide front-face">
 						<img src="images/1428032296-8158.jpg" style="opacity: 0.8" width="294" height="267">
 					</span>
-					<span class="back-face to-top"><h3>豆瓣电影</h3></span>
+					<span class="back-face to-top"><h3>CSS3球体</h3></span>
 				</a>
 			</li>
 			<li class="major-item">
@@ -69,7 +69,7 @@
 					<span class="txt-hide front-face">
 						<img src="images/1405250374-3685.jpg" style="opacity: 0.8" width="294" height="267">
 					</span>
-					<span class="back-face to-top"><h3>豆瓣电影</h3></span>
+					<span class="back-face to-top"><h3></h3></span>
 				</a>
 			</li>
 		</ul>
