--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				</a>
 			</li>
 			<li class="major-item">
-				<a href="http://www.huiyi8.com/">
+				<a href="jd/index.html">
 					<span class="txt-hide front-face">
 						<img src="images/1411890878-8918.jpg" style="opacity: 0.8" width="294" height="267">
 					</span>
