--- a/jd/index.html
+++ b/jd/index.html
@@ -159,7 +159,7 @@
     <div class="top-banner">
     	<div class="content" style="position:relative;" id="topImages">
         	<a href="#">
-            	<img src="images/topimg.jpg" alt="" >
+            	<img src="images/topImg.jpg" alt="" >
         	</a>
        	    <a href="#" class="close-banner" id="close">
             </a>
