--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 				</a>
 			</li>
             <li class="major-item">
-				<a href="3d/moiveload.html">
+				<a href="jd/img_slide.html">
 					<span class="txt-hide front-face">
 						<img src="images/1413775714-2418.jpg" style="opacity: 0.8" width="294" height="267">
 					</span>
-					<span class="back-face to-top"><h3>moiveload</h3></span>
+					<span class="back-face to-top"><h3>图片滑动</h3></span>
 				</a>
 			</li>
 			<li class="major-item">
@@ -65,11 +65,11 @@
 				</a>
 			</li>
 			<li class="major-item">
-				<a href="http://www.huiyi8.com/">
+				<a href="jd/img_lunbo.html">
 					<span class="txt-hide front-face">
 						<img src="images/1405250374-3685.jpg" style="opacity: 0.8" width="294" height="267">
 					</span>
-					<span class="back-face to-top"><h3></h3></span>
+					<span class="back-face to-top"><h3>图片轮播</h3></span>
 				</a>
 			</li>
 		</ul>
