--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 				</a>
 			</li>
 			<li class="major-item">
-				<a href="jd/img_lunbo.html">
+				<a href="jd/jd_lunbo.html">
 					<span class="txt-hide front-face">
 						<img src="images/1405250374-3685.jpg" style="opacity: 0.8" width="294" height="267">
 					</span>
