--- a/jd/jd_lunbo.html
+++ b/jd/jd_lunbo.html
@@ -283,13 +283,13 @@
     <div class="slider">
         <ul id="ul">
         	<li><img src="6.jpg" alt=""/></li>
-            <li><img src="jd1.jpg" alt=""/></li>
-            <li><img src="jd2.jpg" alt=""/></li>
-            <li><img src="jd3.jpg" alt=""/></li>
-            <li><img src="jd4.jpg" alt=""/></li>
-            <li><img src="jd5.jpg" alt=""/></li>
-            <li><img src="jd6.jpg" alt=""/></li>
-            <li><img src="jd1.jpg" alt=""/></li>
+            <li><img src="images/jd1.jpg" alt=""/></li>
+            <li><img src="images/jd2.jpg" alt=""/></li>
+            <li><img src="images/jd3.jpg" alt=""/></li>
+            <li><img src="images/jd4.jpg" alt=""/></li>
+            <li><img src="images/jd5.jpg" alt=""/></li>
+            <li><img src="images/jd6.jpg" alt=""/></li>
+            <li><img src="images/jd1.jpg" alt=""/></li>
             
         </ul>
         <div id="arr"><span id="left" class="spc"><</span><span id="rigth" class="spc">></span></div>
