--- a/jd/jd_lunbo.html
+++ b/jd/jd_lunbo.html
@@ -80,7 +80,7 @@
 <div class="box" id="scroll">
     <div class="slider">
         <ul id="ul">
-        	<li><img src="6.jpg" alt=""/></li>
+            <li><img src="images/jd6.jpg" alt=""/></li>
             <li><img src="images/jd1.jpg" alt=""/></li>
             <li><img src="images/jd2.jpg" alt=""/></li>
             <li><img src="images/jd3.jpg" alt=""/></li>
