--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
 				</a>
 			</li>
             <li class="major-item">
-				<a href="jd/img_slide.html">
+				<a href="dahuoqu/dahuoqu.html">
 					<span class="txt-hide front-face">
 						<img src="images/1413775714-2418.jpg" style="opacity: 0.8" width="294" height="267">
 					</span>
-					<span class="back-face to-top"><h3>图片滑动</h3></span>
+					<span class="back-face to-top"><h3>搭伙去</h3></span>
 				</a>
 			</li>
 			<li class="major-item">
-				<a href="3d/cube.html">
+				<a href="ZT/index.html">
 					<span class="txt-hide front-face">
 						<img src="images/1400684434-4609.jpg" style="opacity: 0.8" width="294" height="267">
 					</span>
-					<span class="back-face to-top"><h3>立方体扩展</h3></span>
+					<span class="back-face to-top"><h3>ZT云流</h3></span>
 				</a>
 			</li>
             <li class="major-item">
@@ -65,11 +65,11 @@
 				</a>
 			</li>
 			<li class="major-item">
-				<a href="jd/jd_lunbo.html">
+				<a href="weibo/index.html">
 					<span class="txt-hide front-face">
 						<img src="images/1405250374-3685.jpg" style="opacity: 0.8" width="294" height="267">
 					</span>
-					<span class="back-face to-top"><h3>图片轮播</h3></span>
+					<span class="back-face to-top"><h3>个人微博</h3></span>
 				</a>
 			</li>
 		</ul>
